--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
-body{
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;600&display=swap');
+body
+{
     font-family: 'Montserrat', sans-serif;
+}
+head{
+    font-family: 'Poppins', sans-serif;
 }
