--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;600&display=swap');
-body
-{
-    font-family: 'Montserrat', sans-serif;
-}
-head{
+
+body {
     font-family: 'Poppins', sans-serif;
+    margin-top: 0rem;
 }
+
+/**head{
+    font-family: 'Poppins', sans-serif;
+}**/
+.link {
+    text-decoration: none;
+}
+
+.list-item-inline {
+    display: inline;
+    padding: 0rem .5rem;
+}
+
+.navigation {
+    background-color:#333;
+    padding: 0.5rem;
+    /* position: fixed; */
+    width:100%
+
+}
+.nav-name {
+    font-size: x-large;
+    font-weight: bold; 
+}
+
+nav a {
+    color: white;
+}
+
