--- a/src/styles.css
+++ b/src/styles.css
@@ -84,12 +84,14 @@ nav a {
 /* header */
 .intro{
     padding: 2rem;
-    display:inline-flex;
+    display:flex;
     text-align:center;
-   
+    max-width:90%;
+    margin:auto;
 }
 .intro-text{
     max-width: 50%;
+    
 }
 .intro-heading{
     color: var(--primary-color);
@@ -97,6 +99,7 @@ nav a {
 .img{
     max-height: 250px;
     max-width: 50%;
+    margin-left: 10%;
 }
 
 /* section */
