--- a/src/styles.css
+++ b/src/styles.css
@@ -1,142 +1,167 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;600&display=swap');
 
-:root{
-    --primary-color:rgb(34, 34, 34);
+:root {
+    --primary-color: rgb(34, 34, 34);
     --off-white-color: rgba(233, 233, 233, 0.795);
 }
 
 body {
     font-family: 'Poppins', sans-serif;
-    margin: 0rem ;
+    margin: 0rem;
 }
 
-.header{
+.header {
     text-align: center;
 }
+
 /**head{
     font-family: 'Poppins', sans-serif;
 }**/
-.container{
-    padding:0rem 1rem;
-}
- .container-center{
-    max-width:600px;
-    margin: auto;
+.container {
+    padding: 0rem 1rem;
 }
 
+.container-center {
+    max-width: 600px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+}
+.buttons{
+    display: flex;
+    flex-direction: row;
+justify-content: center;
+align-items: center;
+}
 /* links */
 .link {
     text-decoration: none;
 }
-.link-primary{
+
+.link-primary {
     background-color: var(--primary-color);
     padding: .5rem 1rem;
+    width: 150px;              
     color: white;
     border-radius: .5rem;
     font-weight: bold;
-    margin:1rem;
-}
-.link-secondary{
+    margin: 0px 10px;}
+
+.link-secondary {
     border: 2px solid var(--primary-color);
     padding: .5rem 1rem;
+   
+    width: 150px;
     border-radius: .5rem;
-    color:var(--primary-color);
+    color: var(--primary-color);
     font-weight: bold;
+    margin: 0px 10px;
+
 }
+
 .list-item-inline {
     display: inline;
     padding: 0rem 1rem;
 }
+
 /* button */
-button{
-    
+button {
+
     padding: .5rem 1rem;
-    background-color:var(--primary-color);
+    background-color: var(--primary-color);
     color: white;
     border-radius: .5rem;
-    font-size:1rem;
+    font-size: 1rem;
     font-weight: bold;
 }
+
 /* navigation */
 .navigation {
-    background-color:var(--primary-color);
+    background-color: var(--primary-color);
     padding: .5rem 1rem 0rem;
     /* position: fixed; */
 }
+
 #nav-name {
     font-size: x-large;
     font-weight: bold;
     padding-top: 1rem;
 }
-.nav-items{
-    text-align:right;
+
+.nav-items {
+    text-align: right;
 }
+
 nav a {
     color: white;
 }
-#link-active{
+
+#link-active {
     background-color: white;
-    color:var(--primary-color);
-    font-weight: bolder; 
-    padding:.3rem;
+    color: var(--primary-color);
+    font-weight: bolder;
+    padding: .3rem;
 }
 
 /* header */
-.intro{
+.intro {
     padding: 2rem;
-    display:flex;
-    text-align:center;
-    max-width:90%;
-    margin:auto;
+    display: flex;
+    text-align: center;
+    max-width: 90%;
+    margin: auto;
 }
-.intro-text{
+
+.intro-text {
     max-width: 50%;
-    
+
 }
-.intro-heading{
+
+.intro-heading {
     color: var(--primary-color);
 }
-.img{
+
+.img {
     max-height: 250px;
     max-width: 50%;
     margin-left: 10%;
 }
 
 /* section */
-.section{
+.section {
     text-align: center;
-    padding: 2rem; 
-    border-radius: 1rem;  
+    padding: 2rem;
+    border-radius: 1rem;
     max-width: 80%
-    
 }
 
-.ow{
+.ow {
     background-color: var(--off-white-color);
 }
 
 /* footer */
-.footer{
+.footer {
     background-color: var(--primary-color);
     text-align: center;
     padding: .5rem 1rem;
-    
+
 }
-.footer-header{
-    font-weight:bold;
-    font-size:1.3rem;
-    color:white
+
+.footer-header {
+    font-weight: bold;
+    font-size: 1.3rem;
+    color: white
 }
-.footer .link{
+
+.footer .link {
     color: white;
 }
-footer ul{
+
+footer ul {
     padding-inline-start: 0rem;
 }
-.footer-icons{
-    max-width:100%;
-    width:2em;
+
+.footer-icons {
+    max-width: 100%;
+    width: 2em;
 }
-
-
-
