--- a/src/styles.css
+++ b/src/styles.css
@@ -106,6 +106,9 @@ nav a {
 }
 
 /* header */
+.header{
+    margin-bottom: 2rem;
+}
 .intro {
     padding: 2rem;
     display: flex;
@@ -139,6 +142,11 @@ nav a {
 
 .ow {
     background-color: var(--off-white-color);
+}
+.icon{
+    display: flex;
+    align-items: center;
+   margin:auto;
 }
 
 /* footer */
